Fix climacons not showing on production.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require climacons-font
  *= require_tree .
  *= require_self
  */
@@ -18,7 +19,19 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "subscriptions";
+@import "weather_grids";
 @import "climacons-font.css";
+
+@font-face {
+    font-family: 'Climacons-Font';
+    src:font-url('climacons-webfont.eot');
+    src:font-url('climacons-webfont.eot?#iefix') format('embedded-opentype'),
+        font-url('climacons-webfont.svg#Climacons-Font') format('svg'),
+        font-url('climacons-webfont.woff') format('woff'),
+        font-url('climacons-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 body {
     padding: 20px;
